infra/comment-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: capstonecomment-container
          image: marudhuraj/capstonecomment
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: comment-cluster-srv
spec:
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 3001
      targetPort: 3001
