infra/gateway-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: capstonegateway-container
          image: marudhuraj/capstonegateway
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-srv
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - name: gateway
      protocol: TCP
      port: 8080
      targetPort: 8080
