infra/user-db-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: capstoneuserdb-container
          image: rvirish/capstoneuserdb
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: user-db-cluster-srv
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3011
      targetPort: 3011
