infra/user-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: capstoneuser-container
          image: marudhuraj/capstoneuser
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: user-cluster-srv
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3000
      targetPort: 3000
