infra/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernates.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-srv
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-cluster-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comment-cluster-srv
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-cluster-srv
                port:
                  number: 3002
          - path: /users-db
            pathType: Prefix
            backend:
              service:
                name: user-db-cluster-srv
                port:
                  number: 3011
